--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^5.4.0",
     "isomorphic-unfetch": "^3.0.0",
+    "lighthouse": "^5.0.0",
     "lodash": "^4.17.11",
     "xml-js": "^1.6.11"
   }
