--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "fetch": "node src/sitemap-reporter.js"
+    "fetch": "node src/sitemap_reporter.js",
+    "score": "node src/lighthouse_score.js"
   },
   "keywords": [],
   "author": "",
