--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^5.4.0",
+    "cheerio": "^1.0.0-rc.3",
     "isomorphic-unfetch": "^3.0.0",
     "lighthouse": "^5.0.0",
     "lodash": "^4.17.11",
