--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "lighthouse": "^5.0.0",
     "lodash": "^4.17.11",
+    "p-iteration": "^1.1.8",
     "xml-js": "^1.6.11"
   }
 }
