--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "fetch": "node batch/fetch_sitemap.js | tee logs/fetch_sitemap.log",
-    "analyze": "node batch/analyze_pages.js | tee logs/analyze_pages.log",
-    "score": "node src/lighthouse_score.js | tee logs/lighthouse_score.log",
+    "fetch": "node batch/fetch_sitemap.js | tee -a logs/fetch_sitemap.log",
+    "analyze": "node batch/analyze_pages.js | tee -a logs/analyze_pages.log",
+    "score": "node src/lighthouse_score.js | tee -a logs/lighthouse_score.log",
     "bootstrap": "node db/bootstrap.js"
   },
   "keywords": [],
