--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "better-sqlite3": "^5.4.0",
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "lighthouse": "^5.0.0",
     "lodash": "^4.17.11",
